# romeo-and-juliet-benchmark

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  romeo_and_juliet.txt
.github/workflows/: docker.yml
contrib/: README.md  ansible.cfg  digitalocean_playbook.yml  generic_playbook.yml
contrib/group_vars/: servers.yml
contrib/roles/conduit/files/: conduit.service  conduit.toml
contrib/roles/conduit/tasks/: main.yml
contrib/roles/dendrite_postgres/tasks/: main.yml
contrib/roles/dendrite_sqlite/tasks/: main.yml
contrib/roles/synapse_postgres/tasks/: main.yml
contrib/roles/synapse_sqlite/files/: homeserver.override.yaml
contrib/roles/synapse_sqlite/tasks/: main.yml
contrib/tasks/: build_rjbench_locally.yml  create_droplet.yml  install_docker.yml  install_rjbench_remote.yml  mkdirs.yml
src/: main.rs
