[package]
name = "rjbench"
version = "0.1.0"
authors = ["timokoesters <timo@koesters.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ruma = { git = "https://github.com/timokoesters/ruma", features = ["rand", "client-api", "unstable-pre-spec"], branch = "uiaafix" }
ruma-client = { git = "https://github.com/timokoesters/ruma", features = ["hyper-native-tls", "client-api"], branch = "uiaafix" }
url = "2.2.2"
log = "0.4.14"
pretty_env_logger = "0.4.0"
tokio = { version = "1.8.2", features = ["rt-multi-thread", "macros"] }
hyper = "0.14.11"
futures = "0.3.15"

[[bin]]
name = "rjbench"
path = "src/main.rs"